Stepper retour accessibilité

--- a/docs/_includes/menu/inc-navigation-etapes.html
+++ b/docs/_includes/menu/inc-navigation-etapes.html
@@ -1,133 +1,139 @@
-<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint">
-    <ul class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
-        <li class="ds44-nav-step">
-            <a href="#" class="active">
-                <span class="number">1</span>
-                <span class="text">Enfant</span>
-            </a>
+<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
+    <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
+        <li class="ds44-nav-step" aria-current="page">
+            <p class="active">
+                <span class="number" aria-hidden="true">1</span>
+                <span class="text" aria-label="Étape 1 : Enfant - en cours">Enfant</span>
+            </p>
         </li>
         <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="inactive">
-                <span class="number">2</span>
+            <p class="inactive">
+                <span class="number" aria-hidden="true">2</span>
+                <span class="visually-hidden">Étape :</span>
                 <span class="text">Lieu</span>
-            </a>
+            </p>
         </li>
         <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="inactive">
-                <span class="number">3</span>
+            <p class="inactive">
+                <span class="number" aria-hidden="true">3</span>
+                <span class="visually-hidden">Étape :</span>
                 <span class="text">Modalités</span>
-            </a>
+            </p>
         </li>
         <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="inactive">
-                <span class="number">4</span>
+            <p class="inactive">
+                <span class="number" aria-hidden="true">4</span>
+                <span class="visually-hidden">Étape :</span>
                 <span class="text">Planning</span>
-            </a>
+            </p>
         </li>
-    </ul>
+    </ol>
 </nav>
 
 <hr>
 
-<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint">
-    <ul class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
+<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
+    <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
         <li class="ds44-nav-step">
-            <a href="#" class="passed">
+            <a href="#" class="passed" aria-label="Étape 1 : Enfant - Validée">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
                 <span class="text">Enfant</span>
             </a>
         </li>
         <li class="ds44-nav-step-sep passed"></li>
-        <li class="ds44-nav-step">
-            <a href="#" class="active">
-                <span class="number">2</span>
-                <span class="text">Lieu</span>
-            </a>
+        <li class="ds44-nav-step" aria-current="page">
+            <p class="active">
+                <span class="number" aria-hidden="true">2</span>
+                <span class="text" aria-label="Étape 2 : Lieu - en cours">Lieu</span>
+            </p>
         </li>
         <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="inactive">
-                <span class="number">3</span>
+            <p class="inactive">
+                <span class="number" aria-hidden="true">3</span>
+                <span class="visually-hidden">Étape :</span>
                 <span class="text">Modalités</span>
-            </a>
+            </p>
         </li>
         <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="inactive">
-                <span class="number">4</span>
+            <p class="inactive">
+                <span class="number" aria-hidden="true">4</span>
+                <span class="visually-hidden">Étape :</span>
                 <span class="text">Planning</span>
-            </a>
+            </p>
         </li>
-    </ul>
+    </ol>
 </nav>
 
 <hr>
 
-<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint">
-    <ul class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
+<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
+    <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
         <li class="ds44-nav-step">
-            <a href="#" class="passed">
+            <a href="#" class="passed" aria-label="Étape 1 : Enfant - Validée">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
                 <span class="text">Enfant</span>
             </a>
         </li>
         <li class="ds44-nav-step-sep passed"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="passed">
+            <a href="#" class="passed" aria-label="Étape 2 : Lieu - Validée">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
                 <span class="text">Lieu</span>
             </a>
         </li>
         <li class="ds44-nav-step-sep passed"></li>
-        <li class="ds44-nav-step">
-            <a href="#" class="active">
-                <span class="number">3</span>
-                <span class="text">Modalités</span>
-            </a>
+        <li class="ds44-nav-step" aria-current="page">
+            <p class="active">
+                <span class="number" aria-hidden="true">3</span>
+                <span class="text" aria-label="Étape 3 : Modalités - en cours">Modalités</span>
+            </p>
         </li>
         <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="inactive">
-                <span class="number">4</span>
+            <p class="inactive">
+                <span class="number" aria-hidden="true">4</span>
+                <span class="visually-hidden">Étape :</span>
                 <span class="text">Planning</span>
-            </a>
+            </p>
         </li>
-    </ul>
+    </ol>
 </nav>
 
 <hr>
 
-<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint">
-    <ul class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
+<nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
+    <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
         <li class="ds44-nav-step">
-            <a href="#" class="passed">
+            <a href="#" class="passed" aria-label="Étape 1 : Enfant - Validée">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
                 <span class="text">Enfant</span>
             </a>
         </li>
         <li class="ds44-nav-step-sep passed"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="passed">
+            <a href="#" class="passed" aria-label="Étape 2 : Lieu - Validée">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
                 <span class="text">Lieu</span>
             </a>
         </li>
         <li class="ds44-nav-step-sep passed"></li>
         <li class="ds44-nav-step">
-            <a href="#" class="passed">
+            <a href="#" class="passed" aria-label="Étape 3 : Modalités - Validée">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
                 <span class="text">Modalités</span>
             </a>
         </li>
         <li class="ds44-nav-step-sep passed"></li>
-        <li class="ds44-nav-step">
-            <a href="#" class="active">
-                <span class="number">4</span>
-                <span class="text">Planning</span>
-            </a>
+        <li class="ds44-nav-step" aria-current="page">
+            <p class="active">
+                <span class="number" aria-hidden="true">4</span>
+                <span class="text" aria-label="Étape 4 : Planning - en cours">Planning</span>
+            </p>
         </li>
-    </ul>
+    </ol>
 </nav>
