--- a/docs/_includes/menu/menu-navigation-interieur.html
+++ b/docs/_includes/menu/menu-navigation-interieur.html
@@ -2,8 +2,10 @@
 <ul class="ds44-collapser">
     <li class="ds44-collapser_element"><a href="#" class="ds44-collapser_content--buttonLike">Lien direct vers catégorie ou contenu N1 (sans sous-catégorie N2)</a></li>
     <li class="ds44-collapser_element">
-        <button type="button" class="ds44-collapser_button">Catégorie N1<i class="icon icon-down" aria-hidden="true"></i></button>
-        <div class="ds44-collapser_content">
+		<p role="heading" aria-level="3">
+			<button type="button" class="ds44-collapser_button">Catégorie N1<i class="icon icon-down" aria-hidden="true"></i></button>
+        </p>
+		<div class="ds44-collapser_content">
             <ul class="ds44-list ds44-collapser_content--level2">
                 <li><a href="#" class="ds44-collapser_content--link">Lien direct vers sous-catégorie N2 (sans sous-catégorie N3)</a></li>
                 <li><a href="#" class="ds44-collapser_content--link">Lien direct vers sous-catégorie N2 (sans sous-catégorie N3)</a></li>
@@ -21,8 +23,10 @@
         </div>
     </li>
     <li class="ds44-collapser_element">
-        <button type="button" class="ds44-collapser_button">Catégorie N1<i class="icon icon-down" aria-hidden="true"></i></button>
-        <div class="ds44-collapser_content">
+		<p role="heading" aria-level="3">
+			<button type="button" class="ds44-collapser_button">Catégorie N1<i class="icon icon-down" aria-hidden="true"></i></button>
+        </p>
+		<div class="ds44-collapser_content">
             <ul class="ds44-list ds44-collapser_content--level2">
                 <li><a href="#" class="ds44-collapser_content--link">Lien direct vers N2 (sans sous-catégorie N3)</a></li>
                 <li><a href="#" class="ds44-collapser_content--link">Lien direct vers N2 (sans sous-catégorie N3)</a></li>
@@ -40,8 +44,10 @@
         </div>
     </li>
     <li class="ds44-collapser_element">
-        <button type="button" class="ds44-collapser_button">Catégorie N1<i class="icon icon-down" aria-hidden="true"></i></button>
-        <div class="ds44-collapser_content">
+		<p role="heading" aria-level="3">
+			<button type="button" class="ds44-collapser_button">Catégorie N1<i class="icon icon-down" aria-hidden="true"></i></button>
+        </p>
+		<div class="ds44-collapser_content">
             <ul class="ds44-list ds44-collapser_content--level2">
                 <li><a href="#" class="ds44-collapser_content--link">Lien direct vers N2 (sans sous-catégorie N3)</a></li>
                 <li><a href="#" class="ds44-collapser_content--link">Lien direct vers N2 (sans sous-catégorie N3)</a></li>
