--- a/docs/_includes/menu/inc-navigation-etapes.html
+++ b/docs/_includes/menu/inc-navigation-etapes.html
@@ -3,30 +3,28 @@
         <li class="ds44-nav-step" aria-current="page">
             <p class="active">
                 <span class="number" aria-hidden="true">1</span>
-                <span class="text" aria-label="Étape 1 : Enfant - en cours">Enfant</span>
+                <span class="visually-hidden">Étape 1 : En cours - </span>
+                <span class="text">Enfant</span>
             </p>
         </li>
-        <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
             <p class="inactive">
                 <span class="number" aria-hidden="true">2</span>
-                <span class="visually-hidden">Étape :</span>
+                <span class="visually-hidden">Étape 2 :</span>
                 <span class="text">Lieu</span>
             </p>
         </li>
-        <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
             <p class="inactive">
                 <span class="number" aria-hidden="true">3</span>
-                <span class="visually-hidden">Étape :</span>
+                <span class="visually-hidden">Étape 3 :</span>
                 <span class="text">Modalités</span>
             </p>
         </li>
-        <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
             <p class="inactive">
                 <span class="number" aria-hidden="true">4</span>
-                <span class="visually-hidden">Étape :</span>
+                <span class="visually-hidden">Étape 4 :</span>
                 <span class="text">Planning</span>
             </p>
         </li>
@@ -37,32 +35,31 @@
 
 <nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
     <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
-        <li class="ds44-nav-step">
-            <a href="#" class="passed" aria-label="Étape 1 : Enfant - Validée">
+        <li class="ds44-nav-step liPassed">
+            <a href="#" class="passed" aria-label="Étape 1 : Validée - Enfant">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
+                <span class="visually-hidden">Étape 1 : Validée - </span>
                 <span class="text">Enfant</span>
             </a>
         </li>
-        <li class="ds44-nav-step-sep passed"></li>
         <li class="ds44-nav-step" aria-current="page">
             <p class="active">
                 <span class="number" aria-hidden="true">2</span>
-                <span class="text" aria-label="Étape 2 : Lieu - en cours">Lieu</span>
+                <span class="visually-hidden">Étape 2 : En cours - </span>
+                <span class="text">Lieu</span>
             </p>
         </li>
-        <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
             <p class="inactive">
                 <span class="number" aria-hidden="true">3</span>
-                <span class="visually-hidden">Étape :</span>
+                <span class="visually-hidden">Étape 3 :</span>
                 <span class="text">Modalités</span>
             </p>
         </li>
-        <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
             <p class="inactive">
                 <span class="number" aria-hidden="true">4</span>
-                <span class="visually-hidden">Étape :</span>
+                <span class="visually-hidden">Étape 4 :</span>
                 <span class="text">Planning</span>
             </p>
         </li>
@@ -73,31 +70,31 @@
 
 <nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
     <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
-        <li class="ds44-nav-step">
-            <a href="#" class="passed" aria-label="Étape 1 : Enfant - Validée">
+        <li class="ds44-nav-step liPassed">
+            <a href="#" class="passed" aria-label="Étape 1 : Validée - Enfant">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
+                <span class="visually-hidden">Étape 1 : Validée - </span>
                 <span class="text">Enfant</span>
             </a>
         </li>
-        <li class="ds44-nav-step-sep passed"></li>
-        <li class="ds44-nav-step">
-            <a href="#" class="passed" aria-label="Étape 2 : Lieu - Validée">
+        <li class="ds44-nav-step liPassed">
+            <a href="#" class="passed" aria-label="Étape 2 : Validée - Lieu">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
+                <span class="visually-hidden">Étape 2 : Validée - </span>
                 <span class="text">Lieu</span>
             </a>
         </li>
-        <li class="ds44-nav-step-sep passed"></li>
         <li class="ds44-nav-step" aria-current="page">
             <p class="active">
                 <span class="number" aria-hidden="true">3</span>
-                <span class="text" aria-label="Étape 3 : Modalités - en cours">Modalités</span>
+                <span class="visually-hidden">Étape 3 : En cours - </span>
+                <span class="text">Modalités</span>
             </p>
         </li>
-        <li class="ds44-nav-step-sep"></li>
         <li class="ds44-nav-step">
             <p class="inactive">
                 <span class="number" aria-hidden="true">4</span>
-                <span class="visually-hidden">Étape :</span>
+                <span class="visually-hidden">Étape 4 :</span>
                 <span class="text">Planning</span>
             </p>
         </li>
@@ -108,31 +105,32 @@
 
 <nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
     <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
-        <li class="ds44-nav-step">
-            <a href="#" class="passed" aria-label="Étape 1 : Enfant - Validée">
+        <li class="ds44-nav-step liPassed">
+            <a href="#" class="passed" aria-label="Étape 1 : Validée - Enfant">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
+                <span class="visually-hidden">Étape 1 : Validée - </span>
                 <span class="text">Enfant</span>
             </a>
         </li>
-        <li class="ds44-nav-step-sep passed"></li>
-        <li class="ds44-nav-step">
-            <a href="#" class="passed" aria-label="Étape 2 : Lieu - Validée">
+        <li class="ds44-nav-step liPassed">
+            <a href="#" class="passed" aria-label="Étape 2 : Validée - Lieu">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
+                <span class="visually-hidden">Étape 2 : Validée - </span>
                 <span class="text">Lieu</span>
             </a>
         </li>
-        <li class="ds44-nav-step-sep passed"></li>
-        <li class="ds44-nav-step">
-            <a href="#" class="passed" aria-label="Étape 3 : Modalités - Validée">
+        <li class="ds44-nav-step liPassed">
+            <a href="#" class="passed" aria-label="Étape 3 : Validée - Modalités">
                 <span class="number"><i class="icon icon-check" aria-hidden="true"></i></span>
+                <span class="visually-hidden">Étape 3 : Validée - </span>
                 <span class="text">Modalités</span>
             </a>
         </li>
-        <li class="ds44-nav-step-sep passed"></li>
         <li class="ds44-nav-step" aria-current="page">
             <p class="active">
                 <span class="number" aria-hidden="true">4</span>
-                <span class="text" aria-label="Étape 4 : Planning - en cours">Planning</span>
+                <span class="visually-hidden">Étape 4 : En cours - </span>
+                <span class="text">Planning</span>
             </p>
         </li>
     </ol>
