--- a/docs/_includes/form/field/input/standard.html
+++ b/docs/_includes/form/field/input/standard.html
@@ -29,6 +29,11 @@
 
 {% capture mainContent %}
     <input type="{{ type }}" id="{{ id }}" name="{{ name }}" class="{{ mainClass }}" {{ title }} {{ attributes }} {{ inputAttributes }} {{ placeholder }} {% if ariaDescribedBy and ariaDescribedBy != '' %}aria-describedby="{{ ariaDescribedBy }}"{% endif %} />{% include form/field/partial/reset.html %}
+
+    {% if include.showPassword == 'true' %}
+        {% include form/field/partial/showPassword.html %}
+    {% endif %}
+    
 {% endcapture %}
 
 {% capture labelContent %}
@@ -38,5 +43,6 @@
 {% if include.hidden == 'true' %}
     {% assign containerClass = containerClass | append : ' hidden' %}
 {% endif %}
+
 
 {% include form/field/partial/container.html id=id content=labelContent containerClass=containerClass explanation=include.explanation %}
