--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -242,6 +242,19 @@ textarea {
     top: 53%;
 }
 
+
+/* Bouton de d'affichage / masquage du mot de passe */
+
+.ds44-showPassword {
+    position: absolute;
+    right: 25px;
+    top: calc(50% - 13px);
+    top: -webkit-calc(50% - 15px);
+    padding-right: 1.5rem;
+    color: $ds44-color-dark-text;
+    cursor: pointer;
+}
+
 /**
  * Checkboxes & radiobuttons
  */
