--- a/docs/_includes/menu/inc-navigation-etapes.html
+++ b/docs/_includes/menu/inc-navigation-etapes.html
@@ -1,32 +1,32 @@
 <nav role="navigation" class="ds44-flex-container ds44-fg1 ds44-hiddenPrint" aria-label="Menu de pagination : [Titre du bloc à paginer]">
     <ol class="ds44-nav-stepper ds44-fg1 ds44-flex-container ds44-list">
         <li class="ds44-nav-step" aria-current="page">
-            <p class="active">
+            <div class="active">
                 <span class="number" aria-hidden="true">1</span>
                 <span class="visually-hidden">Étape 1 : En cours - </span>
                 <span class="text">Enfant</span>
-            </p>
+            </div>
         </li>
         <li class="ds44-nav-step">
-            <p class="inactive">
+            <div class="inactive">
                 <span class="number" aria-hidden="true">2</span>
                 <span class="visually-hidden">Étape 2 :</span>
                 <span class="text">Lieu</span>
-            </p>
+            </div>
         </li>
         <li class="ds44-nav-step">
-            <p class="inactive">
+            <div class="inactive">
                 <span class="number" aria-hidden="true">3</span>
                 <span class="visually-hidden">Étape 3 :</span>
                 <span class="text">Modalités</span>
-            </p>
+            </div>
         </li>
         <li class="ds44-nav-step">
-            <p class="inactive">
+            <div class="inactive">
                 <span class="number" aria-hidden="true">4</span>
                 <span class="visually-hidden">Étape 4 :</span>
                 <span class="text">Planning</span>
-            </p>
+            </div>
         </li>
     </ol>
 </nav>
@@ -43,25 +43,25 @@
             </a>
         </li>
         <li class="ds44-nav-step" aria-current="page">
-            <p class="active">
+            <div class="active">
                 <span class="number" aria-hidden="true">2</span>
                 <span class="visually-hidden">Étape 2 : En cours - </span>
                 <span class="text">Lieu</span>
-            </p>
+            </div>
         </li>
         <li class="ds44-nav-step">
-            <p class="inactive">
+            <div class="inactive">
                 <span class="number" aria-hidden="true">3</span>
                 <span class="visually-hidden">Étape 3 :</span>
                 <span class="text">Modalités</span>
-            </p>
+            </div>
         </li>
         <li class="ds44-nav-step">
-            <p class="inactive">
+            <div class="inactive">
                 <span class="number" aria-hidden="true">4</span>
                 <span class="visually-hidden">Étape 4 :</span>
                 <span class="text">Planning</span>
-            </p>
+            </div>
         </li>
     </ol>
 </nav>
@@ -85,18 +85,18 @@
             </a>
         </li>
         <li class="ds44-nav-step" aria-current="page">
-            <p class="active">
+            <div class="active">
                 <span class="number" aria-hidden="true">3</span>
                 <span class="visually-hidden">Étape 3 : En cours - </span>
                 <span class="text">Modalités</span>
-            </p>
+            </div>
         </li>
         <li class="ds44-nav-step">
-            <p class="inactive">
+            <div class="inactive">
                 <span class="number" aria-hidden="true">4</span>
                 <span class="visually-hidden">Étape 4 :</span>
                 <span class="text">Planning</span>
-            </p>
+            </div>
         </li>
     </ol>
 </nav>
@@ -127,11 +127,11 @@
             </a>
         </li>
         <li class="ds44-nav-step" aria-current="page">
-            <p class="active">
+            <div class="active">
                 <span class="number" aria-hidden="true">4</span>
                 <span class="visually-hidden">Étape 4 : En cours - </span>
                 <span class="text">Planning</span>
-            </p>
+            </div>
         </li>
     </ol>
 </nav>
