--- a/docs/_includes/page-utile/AD_choix_form.html
+++ b/docs/_includes/page-utile/AD_choix_form.html
@@ -10,7 +10,7 @@
         <div id="ds44-choice1" class="hidden" aria-hidden="true">
             <form data-is-ajax="true" action="/">
                 <div class="grid-1-small-1 ds44-box">
-                    <div class="ds44-mb3">
+                    <fieldset class="ds44-mb3">
                         <h3 class="h3-like">Caractéristiques du jugement</h3>
                         <div class="grid-12">
                             <div class="col-6 ds44-minTiny-margin-r">
@@ -26,8 +26,8 @@
                                 {% include form/field/input/standard.html label="Lieu du tribunal" required="true" %}
                             </div>
                         </div>
-                    </div>
-                    <div class="ds44-mb3">
+                    </fieldset>
+                    <fieldset class="ds44-mb3">
                         <h3 class="h3-like">Nom de la ou des personnes concernées par le jugement</h3>
                         <fieldset class="grid-12">
                             <legend class="visually-hidden col-12">Pour la personne 1</legend>
@@ -47,8 +47,8 @@
                                 {% include form/field/input/standard.html type="first-name" label="Prénom" title="Prénom de la seconde personne" %}
                             </div>
                         </fieldset>
-                    </div>
-                    <div class="ds44-mb3">
+                    </fieldset>
+                    <fieldset class="ds44-mb3">
                         <h3 class="h3-like">Motif du jugement</h3>
                         <div class="grid-12">
                             <div class="col-6 ds44-minTiny-margin-r">
@@ -58,15 +58,15 @@
                                 {% include form/field/input/standard.html label="Autre : précisez" %}
                             </div>
                         </div>
-                    </div>
-                    <div class="ds44-mb3">
+                    </fieldset>
+                    <fieldset class="ds44-mb3">
                         <h3 class="h3-like">Contexte et motivations de la demande</h3>
                         <div class="grid-12">
                             <div class="col-12">
                                 {% include form/field/input/textarea.html label="Mention texte libre" required="true" %}
                             </div>
                         </div>
-                    </div>
+                    </fieldset>
                     <div class="txtcenter ds44-mt-std">
                         <button class="ds44-btnStd" title="Envoyer votre demande aux Archives départementales">
                             <span class="ds44-btnInnerText">Envoyer</span>
