--- a/docs/_includes/page-utile/AD_choix_form.html
+++ b/docs/_includes/page-utile/AD_choix_form.html
@@ -81,14 +81,14 @@
             <form data-is-ajax="true" action="/">
                 <div class="grid-1-small-1 ds44-box">
                     {% assign savedAriaDescribedBy = ariaDescribedBy %}
-                    <div class="ds44-mb3">
+                    <fieldset class="ds44-mb3">
                         <h3 class="h3-like">Votre demande</h3>
                         <div class="grid-12">
                             <div class="col-12">
                                 {% include form/field/input/textarea.html label="Mention texte libre" required="true" %}
                             </div>
                         </div>
-                    </div>
+                    </fieldset>
                     <div class="txtcenter ds44-mt-std">
                         <button class="ds44-btnStd" title="Envoyer votre demande aux Archives départementales">
                             <span class="ds44-btnInnerText">Envoyer</span>
