--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -44,6 +44,33 @@
     }
 }
 
+.ds44-cookie-overlay-container {
+	position: relative;
+    width: 100%;
+    overflow: hidden;
+
+    .ds44-media-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+        background-color: #000;
+    }
+    
+    .ds44-msg-media-desactive {
+        color: #fff;
+        display:table-cell;
+        text-align:center;
+        vertical-align:middle
+    }
+}
+
+
+
+
+
 /*RS-1436 reprise de code bootstrap pour l'apparence de video insere dans un wysiwyg*/
 .embed-responsive.embed-responsive-16by9 {
     position: relative;
