Fix : balise <sup>
Décale le texte légèrement en haut, en exposant, sauf pour l'astérisque utilisée pour les champs obligatoires des formulaires.
En effet dans les formulaires, ce caractère est encadré par cette balise et apparait alors trop haut et casse la mise en page..

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -323,7 +323,10 @@ figure, picture {
   display: block;
 }
 
-sup,
+sup[aria-hidden="true"] {
+  vertical-align: 0;
+}
+
 sub {
   vertical-align: 0;
 }
