Fix CSS conteneur vidéo
La ligne avait sautée...

--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -32,6 +32,7 @@
 .ds44-video-container {
     position: relative;
     width: 100%;
+    padding-bottom: 56.25%;
 
     .ds44-video-item {
         position: absolute;
