Modification du chargement des icons marker, ajout des tracés sur la carte avec popin, assemblage des popins ayant une lat & lng identique, affichage du geojson par default si non présent et zoom sur la zone si présent

--- a/docs/_includes/page/recherche__infotrafic.html
+++ b/docs/_includes/page/recherche__infotrafic.html
@@ -12,5 +12,5 @@
     {% endcapture %}
     {% include form/layout/recherche-facettes.html id=formId fields=fields url=include.url %}
   </section>
-  {% include page/partial/recherche-resultats-infotrafic.html geoJsonAttributes=include.geoJsonAttributes %}
+  {% include page/partial/recherche-resultats-infotrafic.html iconsMarker=include.iconsMarker geoJsonAttributes=include.geoJsonAttributes %}
 </main>
