--- a/docs/_includes/carrousel/carrousel-x4.html
+++ b/docs/_includes/carrousel/carrousel-x4.html
@@ -1,5 +1,5 @@
 <div class="ds44-container-large">
-    <div class="mod--hidden ds44-list swipper-carousel-wrap ds44-posRel" data-nb-visible-slides="4">
+    <div class="mod--hidden ds44-list swipper-carousel-wrap ds44-posRel" data-nb-visible-slides="4" data-swiper-title="Titre du carrousel">
         <div class="swiper-container">
             <ul class="swiper-wrapper ds44-list grid-4-small-1 has-gutter-l ds44-carousel-swiper">
                 <li class="swiper-slide">
