fix: RS-1930 / RS-1936

--- a/docs/_layouts/pattern.html
+++ b/docs/_layouts/pattern.html
@@ -33,7 +33,7 @@
 
 
 </head>
-<body class="body">
+<body class="body" data-sitename="Design system Loire Atlantique">
   <!-- <div class="container-fluid" style="padding: 1rem;"> -->
       {{ content }}
   <!-- </div> -->
