--- a/docs/_includes/form/field/input/standard.html
+++ b/docs/_includes/form/field/input/standard.html
@@ -28,12 +28,12 @@
 {% endif %}
 
 {% capture mainContent %}
-    <input type="{{ type }}" id="{{ id }}" name="{{ name }}" class="{{ mainClass }}" {{ title }} {{ attributes }} {{ inputAttributes }} {{ placeholder }} {% if ariaDescribedBy and ariaDescribedBy != '' %}aria-describedby="{{ ariaDescribedBy }}"{% endif %} />{% include form/field/partial/reset.html %}
-
+    <input type="{{ type }}" id="{{ id }}" name="{{ name }}" class="{{ mainClass }}" {{ title }} {{ attributes }} {{ inputAttributes }} {{ placeholder }} {% if ariaDescribedBy and ariaDescribedBy != '' %}aria-describedby="{{ ariaDescribedBy }}"{% endif %} />
     {% if include.showPassword == 'true' %}
         {% include form/field/partial/showPassword.html %}
     {% endif %}
-    
+    {% include form/field/partial/reset.html %}
+
 {% endcapture %}
 
 {% capture labelContent %}
