--- a/docs/_includes/form/field/partial/showPassword.html
+++ b/docs/_includes/form/field/partial/showPassword.html
@@ -1,1 +1,4 @@
-<button class="ds44-showPassword" type="button"><i class="icon icon-handicap-visuel {{ iconClass }}" aria-hidden="true"></i><span class="visually-hidden">Afficher le contenu saisi dans le champ : {{ label }}</span></button>
+<button class="ds44-showPassword" type="button">
+  <i class="icon icon-visuel {{ iconClass }}" aria-hidden="true"></i>
+  <span class="visually-hidden">Afficher le contenu saisi dans le champ : {{ label }}</span>
+</button>
