--- a/docs/_includes/form/field/select/checkbox.html
+++ b/docs/_includes/form/field/select/checkbox.html
@@ -14,10 +14,10 @@
         <div class="ds44-listSelect">
             <ul class="ds44-list" id="listbox-{{ id }}">
                 <li class="ds44-select-list_elem">
-                    {% include form/field/box/checkbox.html value="1" label="Choix 1" boxAttributes=boxAttributes %}
+                    {% include form/field/box/checkbox.html value="1"  checked="checked" label="Choix 1" boxAttributes=boxAttributes %}
                 </li>
                 <li class="ds44-select-list_elem">
-                    {% include form/field/box/checkbox.html value="2" label="Choix 2" boxAttributes=boxAttributes %}
+                    {% include form/field/box/checkbox.html value="2"  checked="checked"  label="Choix 2" boxAttributes=boxAttributes %}
                 </li>
                 <li class="ds44-select-list_elem">
                     {% include form/field/box/checkbox.html value="3" label="Choix 3" boxAttributes=boxAttributes %}
