--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -32,6 +32,7 @@
 .ds44-video-container {
     position: relative;
     width: 100%;
+    height:480px;
 
     .ds44-video-item {
         position: absolute;
