--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -482,6 +482,14 @@ main {
         }
     }
 
+    .ds44-btnStd-showLegend {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: block;
+        z-index: 5;
+    }
+
     /* -------Resultats vide */
 
     &--empty {
