--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -436,7 +436,16 @@ main {
                     margin: $ds44-medium-vmargin;
                     width: calc(33.33% - 3rem);
                     max-width: calc(33.33% - 3rem);
-
+                    &.first {
+                        margin-bottom: 0;
+                    }
+                    &.middle {
+                        margin-bottom: 0;
+                        margin-top: 0.1rem;
+                    }
+                    &.last {
+                        margin-top: 0.1rem;
+                    }
                     @media (max-width: $ds44-large - .0625) {
                         width: calc(50% - 3rem);
                         max-width: calc(50% - 3rem);
