--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -16,10 +16,27 @@
 
 .ds44-container-imgZoom {
     overflow: hidden;
-
-    &.focus {
+    &:after {
+        transition: all $ds44-timing-standard ease-in-out;
+        content: "";
+        width: 100%;
+        height:100%;
+        position:absolute;
+        top:0;
+        left: 0;
+        border:2px dotted #000;
+        opacity:0;
+    }
+    &.focus,
+    &:hover {
         img {
+            border: 1px dotted;
             transform: scale(1.1);
+        }
+    }
+    &.focus {
+        &:after {
+            opacity: 1;
         }
     }
     img {
