RS-1929 & RS-1975, Summary bug and add template in DS

--- a/docs/_includes/menu/inc-menu-sommaire.html
+++ b/docs/_includes/menu/inc-menu-sommaire.html
@@ -1,3 +1,22 @@
+<div class="grid-12-medium-1 grid-12-small-1">
+    <aside class="col-4 ds44-hide-tiny-to-medium ds44-js-aside-summary">
+        <section class="ds44-box ds44-theme">
+            <nav role="navigation" class="ds44-innerBoxContainer" aria-labelledby="titreSommaireDossier">
+                <p role="heading" aria-level="2" id="titreSommaireDossier" class="ds44-box-heading">Sommaire</p>
+                <ul class="ds44-list ds44-list--puces">
+                    <li><a href="#section1">Rattachement à la Bretagne : pas de droit d’option mais le souhait d’un référendum</a></li>
+                    <li><a href="#section2">Le résumé de la première journée</a></li>
+                    <li><a href="#section3">Revoir les débats du lundi</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
+</div>
+
+<button class="ds44-btnStd ds44-btn--invert ds44-fullWBtn ds44-btn-fixed ds44-show-tinyToLarge ds44-hide-large" id="ds44-summary-button" type="button" data-target="#navSommaire">
+    <span class="ds44-btnInnerText">Sommaire</span><i class="icon icon-summary" aria-hidden="true"></i>
+</button>
+
 <section id="summaryMenu" class="ds44-overlay ds44-overlay--navFromBottom" role="dialog" aria-modal="true" aria-label="Sommaire" aria-hidden="true" {{ include.surcharge }}>
     <div class="ds44-container-menuBackLink">
         <p role="heading" aria-level="1" class="ds44-menuBackLink" id="titreRechercher">Sommaire</p>
