941 - style CSS video affichage timeline
Height réduit pour éviter une grande barre blanche

--- a/framework/scss/components/_timeline.scss
+++ b/framework/scss/components/_timeline.scss
@@ -136,5 +136,9 @@
         p, hr {
             margin-top: 3rem;
         }
+
+        .ds44-video-container {
+            height: 330px;
+        }
     }
 }
