Modification couleur site aidant #2111

--- a/framework/scss/_config/_contextual-variables-aidants.scss
+++ b/framework/scss/_config/_contextual-variables-aidants.scss
@@ -6,5 +6,5 @@
 // ---- COLORS ----
 // ----------------
 
-$ds44-contextual-color : #FF6929 !default;
+$ds44-contextual-color : #e1664d !default;
 $ds44-contextual-hover : lighten($ds44-contextual-color, 10%) !default;
