--- a/framework/scss/_libraries/_responsive.scss
+++ b/framework/scss/_libraries/_responsive.scss
@@ -486,3 +486,14 @@
     }
 
 }
+
+
+.all-wauto {
+  display: block !important;
+  float: none !important;
+  clear: none !important;
+  width: auto !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  border: 0;
+}
