--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -59,6 +59,10 @@
     padding: 0 !important;
 }
 
+.ds44--noPdg-t {
+    padding-top: 0 !important; // 0
+}
+
 .ds44--s-padding {
     padding: $ds44-padding-medium/2 !important; // 1rem
 }
