--- a/docs/_includes/composants-transverses/inc-calendrier-assmat.html
+++ b/docs/_includes/composants-transverses/inc-calendrier-assmat.html
@@ -1,6 +1,10 @@
 <p role="heading" aria-level="2">{{ include.title }}</p>
 <table class="tabDispos">
-  <caption class="visually-hidden">{{ include.title }}</caption>
+  <caption class="caption-side bottom mtm">
+      <span class="visually-hidden">{{ include.title }}</span>
+      <span class="inbl"><img src="../../assets/images/creneauDispo.svg" class="creneauDispo mrs" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt="">Créneau disponible</span>
+      <span class="inbl"><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo mrs" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt="">Créneau non disponible</span>
+  </caption>
   <tbody>
     <tr>
       <td>&nbsp;</td>
