--- a/docs/_includes/footer/footer-assmat.html
+++ b/docs/_includes/footer/footer-assmat.html
@@ -23,10 +23,10 @@
         </ul>
     </section>
 
-    {% include boutons/poser-question.html %}
+    {% include boutons/contact-relais.html %}
     {% include boutons/haut-de-page.html %}
 
 </footer>
 
-{% include modal/poser-question.html %}
+{% include modal/contact-relais.html %}
 {% include modal/cookies.html %}
