--- a/framework/scss/components/_menu.scss
+++ b/framework/scss/components/_menu.scss
@@ -157,7 +157,7 @@
     width: 100%;
     position: relative;
 
-    a, div {
+    a, button, div {
       text-decoration: none;
       display: inline-block;
       margin: 0;
@@ -356,7 +356,7 @@
       .ds44-nav-step {
         text-align: left;
         margin: 10px 0;
-        a, div {
+        a, button, div {
           text-decoration: none;
           display: inline-block;
 
