AJout d'une class pour une marge gauche de 1.5rem

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -246,6 +246,10 @@
     margin-right: $ds44-medium-vmargin; // 1.5rem
 }
 
+.ds44-ml-std {
+    margin-left: $ds44-medium-vmargin; // 1.5rem
+}
+
 .ds44-m-std {
     margin: $ds44-medium-vmargin; // 1.5rem
 }
