--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -1016,6 +1016,14 @@
     }
 }
 
+.ds44-separator_light {
+    height: 1px;
+    width: 100%;
+    background-color: $ds44-lightgray;
+    z-index: 1;
+    margin: 30px 0;
+}
+
 
 @media (max-width: $ds44-medium - .0625) {
 
