Add Page Favoris / Selection

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -701,6 +701,12 @@
     height: 100%;
 }
 
+/* === Float === */
+
+.ds44-flRight {
+    float : right;
+}
+
 /* === Color utils === */
 
 .ds44-darkContext {
