Add recherche facette 3 lignes

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -200,6 +200,10 @@
     margin: 0 !important;
 }
 
+.ds44-noMrgb {
+    margin-bottom: 0 !important;
+}
+
 .ds44-hmt {
     margin-top: $ds44-margin-base/2 !important;
 }
