Add Recherche facette avancee
Site Espace collection

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -788,6 +788,14 @@
     background: linear-gradient(to bottom, $ds44-light-bg 50%, $ds44-light 50%);
 }
 
+// Thematic color button More / Less Espace Collection
+.ds44-green {
+    background-color: #99E6D1;
+}
+.ds44-red {
+    background-color: #DC3545;
+}
+
 // Thematic color dataviz
 .ds44-theme--dataviz {
     background-color: $ds44-dataviz-color;
