--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -435,6 +435,12 @@ a.ds44-btnStd--nextPage {
     z-index:10;
 }
 
+// Bouton Supprimer Rouge Espace Collection
+
+.ds44-red .icon{
+    color: $ds44-light;
+}
+
 
 // Bouton Cluster map
 .ds44-btnStd {
