--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -186,6 +186,10 @@
     padding-left: $ds44-padding-xlarge*3 !important; // 9rem
 }
 
+.ds44--3xl-padding-r {
+    padding-right: $ds44-padding-xlarge*3 !important; // 9rem
+}
+
 .ds44--3xl-padding-t {
     padding-top: $ds44-padding-xlarge*3 !important; // 9rem
 }
