--- a/docs/_includes/composants-transverses/inc-calendrier-assmat.html
+++ b/docs/_includes/composants-transverses/inc-calendrier-assmat.html
@@ -1,20 +1,15 @@
 <p role="heading" aria-level="2">{{ include.title }}</p>
-<table class="tabDispos">
-  <caption class="caption-side bottom mtm">
-      <span class="visually-hidden">{{ include.title }}</span>
-      <span class="inbl"><img src="../../assets/images/creneauDispo.svg" class="creneauDispo mrs" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt="">Créneau disponible</span>
-      <span class="inbl"><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo mrs" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt="">Créneau non disponible</span>
-  </caption>
+ <table class="tabDispos">
   <tbody>
     <tr>
       <td>&nbsp;</td>
-      <th scope="col">L</th>
-      <th scope="col">M</th>
-      <th scope="col">M</th>
-      <th scope="col">J</th>
-      <th scope="col">V</th>
-      <th scope="col">S</th>
-      <th scope="col">D</th>
+      <th scope="col" aria-label="Lundi">L</th>
+      <th scope="col" aria-label="Mardi">M</th>
+      <th scope="col" aria-label="Mercredi">M</th>
+      <th scope="col" aria-label="Jeudi">J</th>
+      <th scope="col" aria-label="Vendredi">V</th>
+      <th scope="col" aria-label="Samedi">S</th>
+      <th scope="col" aria-label="Dimanche">D</th>
     </tr>
     <tr>
       <th scope="row">Avant l'école</th>
@@ -47,7 +42,7 @@
       <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
     <tr>
-      <th scope="row">Après midi</th>
+      <th scope="row">Après-midi</th>
       <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
       <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
       <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
@@ -78,3 +73,7 @@
     </tr>
   </tbody>
 </table>
+<div class="mtm">
+    <p><img src="../../assets/images/creneauDispo.svg" class="creneauDispo mrs" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt="">Créneau disponible</p>
+    <p class="ds44-noMrg"><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo mrs" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt="">Créneau non disponible</p>
+</div>
