--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -1280,6 +1280,9 @@ h6.visually-hidden + * {
     .ds44-posTopCont {
         top: $ds44-margin-base;
     }
+    .ds44-tablet-augment-pt {
+        padding-top: 9rem !important;
+    }
 
 }
 
